fix: get accounts address from wallet, fix incorrect bids record

--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,13 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>MetEast</title>
+    <style>
+      iframe{
+        z-index: 1 !important
+      }
+    </style>
   </head>
-  <body style="z-index: 2147483648;">
+  <body style="z-index: 2147483647;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
