feat: Click to like heart button to favorite it.

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <title>MetEast</title>
     <style>
       iframe{
-        z-index: 1 !important
+        z-index: -11111111111 !important
       }
     </style>
   </head>
