fix: update tokenomics page

--- a/public/tokenomics/index.html
+++ b/public/tokenomics/index.html
@@ -52,9 +52,9 @@ By our unique mechanism, MetEast will help all the users tackle the problem of p
         <h1>How</h1>
         <span>
           <ul>
-            <li>All users can mint their own NFT blind boxes: the users will decide whatever NFTs to put into the blind boxes, eg. a combination of rare, valuable, popular and easy-to-sell NFTs with less so NFTs to make sure the potential buyers can get high-value NFTs at low cost by certain chance;</li>
-            <li>For the less lucky users missing the chance, there will still be trading rewards for buying NFT blind box;</li>
-            <li>The NFT blind box minted on MetEast through smart contracts constitute a NFT itself, which means once minted it cannot be revised or revoked. For the buyers, blind boxes in NFT leaving no place for cheating means fair game.</li>
+            <li>All users can mint their own NFT mystery boxes: the users will decide whatever NFTs to put into the mystery boxes, eg. a combination of rare, valuable, popular and easy-to-sell NFTs with less so NFTs to make sure the potential buyers can get high-value NFTs at low cost by certain chance;</li>
+            <li>For the less lucky users missing the chance, there will still be trading rewards for buying NFT mystery box;</li>
+            <li>The NFT mystery box minted on MetEast through smart contracts constitute a NFT itself, which means once minted it cannot be revised or revoked. For the buyers, mystery boxes in NFT leaving no place for cheating means fair game.</li>
             <li>We will deploy on ETH as well, which means most of the NFTs on Opensea can be circulated to MetEast.</li>
           </ul>
           
@@ -67,7 +67,7 @@ By our unique mechanism, MetEast will help all the users tackle the problem of p
         <span>
           <ul>
             <li>NFT minting: users can mint their own NFTs on MetEast or circulate their NFTs on Opensea and other NFT platform to MetEast.</li>
-            <li>NFT blind boxes minting: in MetEast 1.0, we provide the stability and compatibility of up to 100 NFTs in one NFT blind box by the users.</li>
+            <li>NFT mystery boxes minting: in MetEast 1.0, we provide the stability and compatibility of up to 100 NFTs in one NFT mystery box by the users.</li>
             <li>Trading rewards: users are provided with ME Coin as rewards for trading.</li>
             <li>DAO: we will establish the community governance on DAO (Decentralized Autonomous Organization). Tokens released by MetEast are not only crypto valuable tokens but also ballot tickets.</li>
           </ul>
