fix: add config file and optimize code

--- a/public/tokenomics/index.html
+++ b/public/tokenomics/index.html
@@ -240,7 +240,7 @@ The total supply of ME COIN will be 1,000,000,000, 500,000,000 of which will be 
 Our SNS and community is open. You may keep abreast of MetEast via the following 
         </p>
         <h3>links:</h3>
-        <a href="https://twitter.com/Meteast2022" target="_blank" type="button" class="btn btn-primary btn-lg">
+        <a href="https://twitter.com/MetEastNFT" target="_blank" type="button" class="btn btn-primary btn-lg">
           <i class="bi bi-twitter"></i>
         </a>
         <a href="https://t.me/MetEastofficial" target="_blank" type="button" class="btn btn-primary btn-lg">
